--- a/notebooks/BufferStockTheory-Problems.ipynb
+++ b/notebooks/BufferStockTheory-Problems.ipynb
@@ -631,7 +631,7 @@
     "\n",
     "### [If the GIC-Nrm Holds, $\\exists$ a finite 'target' $\\mNrm$](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#onetarget)\n",
     "\n",
-    "Section [Individual Target Wealth](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#onetarget) shows that, under parameter values for which the limiting consumption function exists, if the [GICNrm](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICNrm) holds then there will be a value $\\Trg{m}$ such that:\n",
+    "Section [Individual Target Wealth](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#onetarget) shows that, under parameter values for which the limiting consumption function exists, if the [GICMod](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICMod) holds then there will be a value $\\Trg{m}$ such that:\n",
     "\n",
     "\\begin{eqnarray*}\n",
     "\\Ex[m_{t+1}] & > & m_{t}~\\text{if $m_{t} < \\Trg{m}$} \\\\\n",
@@ -668,9 +668,9 @@
     "which can be solved numerically for the unique $\\Bal{\\mNrm}$ that satisfies it.\n",
     "\n",
     "\n",
-    "### [Example With Finite Pseudo-Steady-State But Infinite Target Wealth](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICNrmFailsButGICRawHolds)\n",
+    "### [Example With Finite Pseudo-Steady-State But Infinite Target Wealth](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICModFailsButGICRawHolds)\n",
     "\n",
-    "[A figure](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICNrmFailsButGICRawHolds) depicts a solution when the **FVAC** [(Finite Value of Autarky Condition)](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#FVAC) and [**WRIC**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#FVAC) hold (so that the model has a solution), the [**GIC**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICRaw) holds, so the model has a pseudo-steady-state $\\Bal{\\mNrm}$, but the [**GIC-Nrm**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICNrm) fails, so the model does not have an individual target wealth ratio $\\Trg{\\mNrm}$ (or, rather, the target wealth ratio is infinity, as can be seen by the fact that the level of $\\cNrm$ is always below the level that would keep $\\Ex_{t}[\\Delta \\mNrm_{t+1}] = 0$).\n",
+    "[A figure](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICModFailsButGICRawHolds) depicts a solution when the **FVAC** [(Finite Value of Autarky Condition)](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#FVAC) and [**WRIC**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#FVAC) hold (so that the model has a solution), the [**GIC**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICRaw) holds, so the model has a pseudo-steady-state $\\Bal{\\mNrm}$, but the [**GIC-Nrm**](https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICMod) fails, so the model does not have an individual target wealth ratio $\\Trg{\\mNrm}$ (or, rather, the target wealth ratio is infinity, as can be seen by the fact that the level of $\\cNrm$ is always below the level that would keep $\\Ex_{t}[\\Delta \\mNrm_{t+1}] = 0$).\n",
     "\n",
     "This example was constructed by quadrupling the variance of the permanent shocks from the baseline parameterization.  The extra precautionary saving induced by increased uncertainty is what pushes the agent into the region without a target wealth ratio."
    ]
@@ -680,7 +680,7 @@
    "id": "e103f755",
    "metadata": {},
    "source": [
-    "`# Create an example consumer instance where the GICNrm fails but the GIC Holds:`"
+    "`# Create an example consumer instance where the GICMod fails but the GIC Holds:`"
    ]
   },
   {
@@ -696,17 +696,17 @@
    },
    "outputs": [],
    "source": [
-    "# GICNrmFailsButGICRawHolds Example\n",
+    "# GICModFailsButGICRawHolds Example\n",
     "\n",
     "base_params['cycles'] = 0  # revert to default of infinite horizon\n",
-    "GICNrmFailsButGICRawHolds_params = dict(base_params)\n",
+    "GICModFailsButGICRawHolds_params = dict(base_params)\n",
     "\n",
     "# Increase patience by increasing risk\n",
-    "GICNrmFailsButGICRawHolds_params['PermShkStd'] = [0.2]\n",
+    "GICModFailsButGICRawHolds_params['PermShkStd'] = [0.2]\n",
     "\n",
     "# Create an agent with these parameters\n",
-    "GICNrmFailsButGICRawHolds = \\\n",
-    "    IndShockConsumerType(**GICNrmFailsButGICRawHolds_params,\n",
+    "GICModFailsButGICRawHolds = \\\n",
+    "    IndShockConsumerType(**GICModFailsButGICRawHolds_params,\n",
     "                         quietly=True,messaging_level=logging.CRITICAL  # If True, output suppressed\n",
     "                         )"
    ]
@@ -734,15 +734,15 @@
    "outputs": [],
    "source": [
     "# Solve the model for these parameter values\n",
-    "GICNrmFailsButGICRawHolds.tolerance = 0.0001  # Declare victory at ...\n",
+    "GICModFailsButGICRawHolds.tolerance = 0.0001  # Declare victory at ...\n",
     "# Suppress output during solution\n",
-    "GICNrmFailsButGICRawHolds.solve(quietly=False,messaging_level=logging.CRITICAL) \n",
+    "GICModFailsButGICRawHolds.solve(quietly=False,messaging_level=logging.CRITICAL) \n",
     "\n",
     "# Because we are trying to solve a problem very close to the poised patience\n",
     "# values, we want to do it with extra precision to be sure we've gotten the\n",
     "# answer right.  We can retrieve the distance between the last two solutions:\n",
     "\n",
-    "distance_original = GICNrmFailsButGICRawHolds.solution[0].distance_last\n",
+    "distance_original = GICModFailsButGICRawHolds.solution[0].distance_last\n",
     "\n",
     "# But high precision would have slowed things down if we used it from the start\n",
     "\n",
@@ -750,15 +750,15 @@
     "# parameters that will yield a more precise answer:\n",
     "\n",
     "# Solve with larger than normal range\n",
-    "GICNrmFailsButGICRawHolds.aXtraMax = GICNrmFailsButGICRawHolds.aXtraMax * 10\n",
+    "GICModFailsButGICRawHolds.aXtraMax = GICModFailsButGICRawHolds.aXtraMax * 10\n",
     "\n",
     "# Solve using four times as many gridpoints\n",
-    "GICNrmFailsButGICRawHolds.aXtraCount = GICNrmFailsButGICRawHolds.aXtraCount * 4\n",
+    "GICModFailsButGICRawHolds.aXtraCount = GICModFailsButGICRawHolds.aXtraCount * 4\n",
     "\n",
-    "GICNrmFailsButGICRawHolds.update_assets_grid()\n",
+    "GICModFailsButGICRawHolds.update_assets_grid()\n",
     "\n",
     "# Solve to a 10 times tighter degree of error tolerance\n",
-    "GICNrmFailsButGICRawHolds.tolerance = GICNrmFailsButGICRawHolds.tolerance/10\n",
+    "GICModFailsButGICRawHolds.tolerance = GICModFailsButGICRawHolds.tolerance/10\n",
     "\n",
     "# When the solver reaches its tolerance threshold, it changes the solver\n",
     "# attribute stge_kind to have 'iter_status' of 'finished'\n",
@@ -766,37 +766,37 @@
     "# To continue the solution from where we left off, we just change the\n",
     "# 'iter_status' to 'iterator' and tell it to \".solve()\" again\n",
     "\n",
-    "GICNrmFailsButGICRawHolds.solution[0].stge_kind['iter_status'] = 'iterator'\n",
+    "GICModFailsButGICRawHolds.solution[0].stge_kind['iter_status'] = 'iterator'\n",
     "# continue solving\n",
     "\n",
     "# Setting messaging_level to NOTSET prints all info including progress\n",
-    "GICNrmFailsButGICRawHolds.solve(messaging_level=logging.NOTSET, quietly=False)\n",
+    "GICModFailsButGICRawHolds.solve(messaging_level=logging.NOTSET, quietly=False)\n",
     "\n",
     "# Test whether the new solution meets a tighter tolerance than before:\n",
-    "distance_now = GICNrmFailsButGICRawHolds.solution[0].distance_last\n",
+    "distance_now = GICModFailsButGICRawHolds.solution[0].distance_last\n",
     "print('\\ndistance_now < distance_original: ' +\n",
     "      str(distance_now < distance_original))\n",
     "\n",
     "# Again increase the range\n",
-    "GICNrmFailsButGICRawHolds.aXtraMax = GICNrmFailsButGICRawHolds.aXtraMax * 10\n",
+    "GICModFailsButGICRawHolds.aXtraMax = GICModFailsButGICRawHolds.aXtraMax * 10\n",
     "\n",
     "# and gridpoints\n",
-    "GICNrmFailsButGICRawHolds.aXtraCount = GICNrmFailsButGICRawHolds.aXtraCount * 2\n",
+    "GICModFailsButGICRawHolds.aXtraCount = GICModFailsButGICRawHolds.aXtraCount * 2\n",
     "\n",
     "# construct grid with the extra gridpoints and expanded range\n",
-    "GICNrmFailsButGICRawHolds.update_assets_grid()\n",
+    "GICModFailsButGICRawHolds.update_assets_grid()\n",
     "\n",
     "# and decrease error tolerance\n",
-    "GICNrmFailsButGICRawHolds.tolerance = GICNrmFailsButGICRawHolds.tolerance/100\n",
+    "GICModFailsButGICRawHolds.tolerance = GICModFailsButGICRawHolds.tolerance/100\n",
     "\n",
     "# mark as not finished but ready to continue iterating\n",
-    "GICNrmFailsButGICRawHolds.solution[0].stge_kind['iter_status'] = 'iterator'\n",
+    "GICModFailsButGICRawHolds.solution[0].stge_kind['iter_status'] = 'iterator'\n",
     "\n",
     "# continue solving\n",
-    "GICNrmFailsButGICRawHolds.solve(messaging_level=logging.DEBUG, quietly=False)\n",
+    "GICModFailsButGICRawHolds.solve(messaging_level=logging.DEBUG, quietly=False)\n",
     "\n",
     "# Test whether the new solution meets a tighter tolerance than before:\n",
-    "distance_now = GICNrmFailsButGICRawHolds.solution[0].distance_last\n",
+    "distance_now = GICModFailsButGICRawHolds.solution[0].distance_last\n",
     "print('\\ndistance_now < distance_original: ' +\n",
     "      str(distance_now < distance_original))"
    ]
@@ -824,9 +824,9 @@
    },
    "outputs": [],
    "source": [
-    "# Plot https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICNrmFailsButGICRawHolds\n",
+    "# Plot https://econ-ark.github.io/BufferStockTheory/BufferStockTheory3.html#GICModFailsButGICRawHolds\n",
     "\n",
-    "soln = GICNrmFailsButGICRawHolds.solution[0]  # Short alias for solution\n",
+    "soln = GICModFailsButGICRawHolds.solution[0]  # Short alias for solution\n",
     "\n",
     "# Get objects that have been Built, parameters configured, and expectations \n",
     "Bilt, Pars, E_tp1_ = soln.Bilt, soln.Pars, soln.E_Next_\n",
@@ -912,7 +912,7 @@
     "    ax.text(mBalLvl+0.02, cNrmFacBalLvl-0.10, r\"$\\nwarrow$\", fontsize=fsmid)\n",
     "    ax.text(mBalLvl+0.25, cNrmFacBalLvl-0.18, r\"$\\check{m}~$\", fontsize=fsmid)\n",
     "\n",
-    "makeFig('GICNrmFailsButGICRawHolds')\n",
+    "makeFig('GICModFailsButGICRawHolds')\n",
     "print('Finite mBalLvl but infinite mNrmFacTrgNrm')"
    ]
   },
