--- a/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
+++ b/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
@@ -17,7 +17,19 @@
      0
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'plotFuncs' from 'HARK.utilities' (c:\\users\\david\\advmacro\\bufferstocktheory\\src\\econ-ark\\HARK\\utilities.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2008/170291243.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mHARK\u001b[0m \u001b[1;31m# Prevents import error from Demos repo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mHARK\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutilities\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplotFuncs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;31m# Choose some calibrated parameters that roughly match steady state\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'plotFuncs' from 'HARK.utilities' (c:\\users\\david\\advmacro\\bufferstocktheory\\src\\econ-ark\\HARK\\utilities.py)"
+     ]
+    }
+   ],
    "source": [
     "# Initial imports and notebook setup, click arrow to show\n",
     "\n",
@@ -506,10 +518,11 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "collapsed,code_folding",
+   "cell_metadata_json": true,
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
