Fixed some bugs

--- a/notebooks/PerfForesightCRRA-Impatience-Problems.ipynb
+++ b/notebooks/PerfForesightCRRA-Impatience-Problems.ipynb
@@ -30,10 +30,10 @@
     "\n",
     "import numpy as np\n",
     "import HARK \n",
-    "from time import clock\n",
+    "import time\n",
     "from copy import deepcopy\n",
     "mystr = lambda number : \"{:.4f}\".format(number)\n",
-    "from HARK.utilities import plotFuncs\n",
+    "from HARK.utilities import plot_funcs\n",
     "\n",
     "# These last two will make our charts look nice\n",
     "plt.style.use('seaborn-darkgrid')\n",
@@ -236,7 +236,7 @@
        " 'addToTimeVary',\n",
        " 'assignParameters',\n",
        " 'cFunc_terminal_',\n",
-       " 'checkConditions',\n",
+       " 'check_conditions',\n",
        " 'checkElementsOfTimeVaryAreLists',\n",
        " 'checkRestrictions',\n",
        " 'clearHistory',\n",
@@ -248,10 +248,10 @@
        " 'getControls',\n",
        " 'getMortality',\n",
        " 'getPostStates',\n",
-       " 'getRfree',\n",
+       " 'get_Rfree',\n",
        " 'getShocks',\n",
        " 'getStates',\n",
-       " 'initializeSim',\n",
+       " 'initialize_sim',\n",
        " 'makeShockHistory',\n",
        " 'pLvlInitMean',\n",
        " 'pLvlInitStd',\n",
@@ -263,13 +263,13 @@
        " 'quiet',\n",
        " 'readShocks',\n",
        " 'read_shocks',\n",
-       " 'resetRNG',\n",
+       " 'reset_rng',\n",
        " 'seed',\n",
        " 'shock_vars',\n",
        " 'shock_vars_',\n",
        " 'simBirth',\n",
        " 'simDeath',\n",
-       " 'simOnePeriod',\n",
+       " 'sim_one_period',\n",
        " 'simulate',\n",
        " 'solution',\n",
        " 'solution_terminal',\n",
@@ -287,7 +287,7 @@
        " 'time_vary_',\n",
        " 'tolerance',\n",
        " 'track_vars',\n",
-       " 'unpackcFunc',\n",
+       " 'unpack_cFunc',\n",
        " 'updateSolutionTerminal',\n",
        " 'vFunc_terminal_',\n",
        " 'verbose']"
