--- a/notebooks/TractableBufferStock-Interactive-Problems.ipynb
+++ b/notebooks/TractableBufferStock-Interactive-Problems.ipynb
@@ -32,13 +32,13 @@
     "\n",
     "import numpy as np\n",
     "import HARK \n",
-    "from time import clock\n",
+    "import time\n",
     "from copy import deepcopy\n",
     "mystr = lambda number : \"{:.3f}\".format(number)\n",
     "\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
-    "from HARK.utilities import plotFuncs"
+    "from HARK.utilities import plot_funcs"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "\\\\ \\left(\\frac{(R \\beta (1-\\mho))^{1/\\rho}}{G (1-\\mho)}\\right)  &<  1\n",
     "\\\\ \\left(\\frac{(R \\beta)^{1/\\rho}}{G} (1-\\mho)^{-\\rho}\\right)  &<  1\n",
     "\\end{align}\n",
-    "and recall (from [PerfForesightCRRA](http://econ.jhu.edu/people/ccarroll/public/lecturenotes/consumption/PerfForesightCRRA/)) that the perfect foresight 'Growth Impatience Factor' is \n",
+    "and recall (from [PerfForesightCRRA](https://www.econ2.jhu.edu/people/ccarroll/public/lecturenotes/consumption/PerfForesightCRRA/)) that the perfect foresight 'Growth Impatience Factor' is \n",
     "\\begin{align}\\label{eq:PFGIC}\n",
     "\\left(\\frac{(R \\beta)^{1/\\rho}}{G}\\right)  &<  1\n",
     "\\end{align}\n",
@@ -332,7 +332,7 @@
     "\n",
     "First, create a variable `betaMax` equal to the value of $\\beta$ at which the Growth Impatience Factor is exactly equal to 1 (that is, the consumer is exactly on the border between patience and impatience).  (Hint: The formula for this is [here](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock/#DiscountMaxGICTBS)).\n",
     "\n",
-    "Next, create a slider/'widget' like the one above, but where all variables except $\\beta$ are set to their default values, and the slider takes $\\beta$ from 0.05 below its default value up to `betaMax - 0.01`.  (The numerical solution algorithm becomes unstable when the GIC is too close to being violated, so you don't want to go all the way up to `betaMax.`)\n",
+    "Next, create a slider/'widget' like the one above, but where all variables except $\\beta$ are set to their default values, and the slider takes $\\beta$ from 0.05 below its default value up to `betaMax - 0.01`.  (The numerical solution algorithm becomes unstable when the GICRaw is too close to being violated, so you don't want to go all the way up to `betaMax.`)\n",
     "\n",
     "Explain the logic of the result that you see.\n",
     "\n",
