--- a/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
+++ b/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
@@ -107,8 +107,8 @@
     "    \"TranShkCount\":5,  # Number of points in transitory income shock grid\n",
     "    \"UnempPrb\":0.07,  # Probability of unemployment while working\n",
     "    \"IncUnemp\":0.15,  # Unemployment benefit replacement rate\n",
-    "    \"UnempPrbRet\":None,\n",
-    "    \"IncUnempRet\":None,\n",
+    "    \"UnempPrbRet\":0.07,\n",
+    "    \"IncUnempRet\":0.15,\n",
     "    \"aXtraMin\":0.00001,  # Minimum end-of-period assets in grid\n",
     "    \"aXtraMax\":20,  # Maximum end-of-period assets in grid\n",
     "    \"aXtraCount\":20,  # Number of points in assets grid,\n",
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 7/7 [01:03<00:00,  9.10s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 7/7 [00:57<00:00,  8.19s/it]\n"
      ]
     }
    ],
@@ -381,8 +381,7 @@
    "execution_count": 9,
    "id": "baac89df",
    "metadata": {
-    "code_folding": [],
-    "lines_to_next_cell": 1
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -394,7 +393,7 @@
     "    return calcConsChangeAfterUncertaintyChange(ConsumerTypes,newVals,\"TranShkStd\")\n",
     "\n",
     "def calcConsChangeAfterUnempPrbChange(newVals):\n",
-    "    return calcConsChangeAfterUncertaintyChange(ConsumerTypes,newVals,\"UnempPrb\")\n"
+    "    return calcConsChangeAfterUncertaintyChange(ConsumerTypes,newVals,\"UnempPrb\")"
    ]
   },
   {
@@ -417,7 +416,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [04:24<00:00, 26.41s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 10/10 [04:33<00:00, 27.36s/it]\n"
      ]
     },
     {
@@ -479,6 +478,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8dd8efa-74d0-4e0a-b357-24f81c48ae78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PROBLEM: soln here \n",
+    "# (rename all-caps problem in line above to all-caps solution)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7b5b6064",
    "metadata": {},
@@ -490,6 +500,17 @@
     "Use the toolkit to perform an exercise designed to make a rough calculation of how such stimulus payments might affect the dynamics of aggregate consumption expenditures.  To do this, you will want to use the `ConsPrefShock` model, which allows for a temporary shock to the utility from consumption that can be used to model a one-quarter closing of restaurants and other retail businesses (your marginal utility of spending money on restaurants goes to zero if the restaurants are closed!).  \n",
     "\n",
     "In more detail, you might incorporate a negative marginal utility shock of 10 percent in the quarter when the pandemic recession hits, followed by a full bounceback of marginal utility to its normal state one quarter later.  And, I suggest you incorporate a stimulus payment of about 5 percent of annual income for a typical consumer.  Your task is to show the path of consumer spending leading up to the pandemic quarter (which should be flat, since the pandemic is unanticipated), and then the path during the pandemic quarter and in the several quarters after it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96a418e-648e-468f-ad68-fa715e383e07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PROBLEM: soln here \n",
+    "# (rename all-caps problem in line above to all-caps solution)"
    ]
   }
  ],
