--- a/notebooks/BufferStockTheory-Problems.ipynb
+++ b/notebooks/BufferStockTheory-Problems.ipynb
@@ -2112,20 +2112,14 @@
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "ExecuteTime,collapsed,slideshow,jupyter,tags,pycharm,jp-MarkdownHeadingCollapsed,heading_collapsed,-autoscroll",
+   "cell_metadata_filter": "ExecuteTime,collapsed,pycharm,jp-MarkdownHeadingCollapsed,jupyter,heading_collapsed,slideshow,tags,-autoscroll",
    "cell_metadata_json": true,
    "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,py:percent",
-   "notebook_metadata_filter": "all,-widgets,-varInspector",
-   "text_representation": {
-    "extension": ".py",
-    "format_name": "percent",
-    "format_version": "1.3",
-    "jupytext_version": "1.11.5"
-   }
+   "notebook_metadata_filter": "all,-widgets,-varInspector"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2139,7 +2133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
