--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "087108b7",
    "metadata": {
     "code_folding": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b6339a1b-b47d-4ee4-b69f-13fcb85ddb37",
    "metadata": {
     "code_folding": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "be2e945c-7965-46df-8382-f29e1abe6eda",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "99b57890-829f-4d36-9215-7a6d64573db1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e00769c1",
    "metadata": {},
    "outputs": [
@@ -275,7 +283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                   | 0/7 [00:00<?, ?it/s]GPFRaw                 = 0.994269 \n",
+      "  0%|                                                                                            | 0/7 [00:00<?, ?it/s]GPFRaw                 = 0.994269 \n",
       "GPFNrm                 = 0.997517 \n",
       "GPFAggLivPrb           = 0.988055 \n",
       "Thorn = APF            = 0.994269 \n",
@@ -285,76 +293,27 @@
       "WRPF                   = 0.068051 \n",
       "DiscFacGPFNrmMax       = 0.980708 \n",
       "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 14%|██████████▋                                                                | 1/7 [00:03<00:21,  3.63s/it]GPFRaw                 = 0.996738 \n",
-      "GPFNrm                 = 0.999994 \n",
-      "GPFAggLivPrb           = 0.990508 \n",
-      "Thorn = APF            = 0.996738 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.974572 \n",
-      "WRPF                   = 0.068220 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 29%|█████████████████████▍                                                     | 2/7 [00:07<00:18,  3.72s/it]GPFRaw                 = 0.999206 \n",
-      "GPFNrm                 = 1.002470 \n",
-      "GPFAggLivPrb           = 0.992961 \n",
-      "Thorn = APF            = 0.999206 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.976985 \n",
-      "WRPF                   = 0.068389 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 43%|████████████████████████████████▏                                          | 3/7 [00:11<00:15,  3.92s/it]GPFRaw                 = 1.001674 \n",
-      "GPFNrm                 = 1.004946 \n",
-      "GPFAggLivPrb           = 0.995414 \n",
-      "Thorn = APF            = 1.001674 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.979399 \n",
-      "WRPF                   = 0.068558 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 57%|██████████████████████████████████████████▊                                | 4/7 [00:15<00:12,  4.08s/it]GPFRaw                 = 1.004143 \n",
-      "GPFNrm                 = 1.007423 \n",
-      "GPFAggLivPrb           = 0.997867 \n",
-      "Thorn = APF            = 1.004143 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.981812 \n",
-      "WRPF                   = 0.068727 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 71%|█████████████████████████████████████████████████████▌                     | 5/7 [00:22<00:10,  5.01s/it]GPFRaw                 = 1.006611 \n",
-      "GPFNrm                 = 1.009899 \n",
-      "GPFAggLivPrb           = 1.000320 \n",
-      "Thorn = APF            = 1.006611 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.984225 \n",
-      "WRPF                   = 0.068896 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      " 86%|████████████████████████████████████████████████████████████████▎          | 6/7 [00:30<00:05,  5.92s/it]GPFRaw                 = 1.009079 \n",
-      "GPFNrm                 = 1.012375 \n",
-      "GPFAggLivPrb           = 1.002772 \n",
-      "Thorn = APF            = 1.009079 \n",
-      "PermGroFacAdj          = 0.996744 \n",
-      "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.986639 \n",
-      "WRPF                   = 0.069065 \n",
-      "DiscFacGPFNrmMax       = 0.980708 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n",
-      "100%|███████████████████████████████████████████████████████████████████████████| 7/7 [00:38<00:00,  5.53s/it]\n"
+      "  0%|                                                                                            | 0/7 [00:02<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "initialize_sim() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13032/93912238.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mThisType\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMyTypes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mTest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mThisType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mThisType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialize_sim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mThisType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimulate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1200\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: initialize_sim() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
     "# Progress bar keeps track interactively of how many have been made\n",
     "for ThisType in tqdm(MyTypes):\n",
-    "    ThisType.solve()\n",
-    "    ThisType.initialize_sim()\n",
-    "    ThisType.simulate()"
+    "    Test = deepcopy(ThisType.solve())\n",
+    "    ThisType.initialize_sim(Test)\n",
+    "    ThisType.simulate(1200)"
    ]
   },
   {
@@ -655,7 +614,7 @@
    "cell_type": "markdown",
    "id": "5ca81307",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
+    "incorrectly_encoded_metadata": "jp-MarkdownHeadingCollapsed=true",
     "tags": []
    },
    "source": [
@@ -708,7 +667,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "ExecuteTime,collapsed,incorrectly_encoded_metadata,code_folding,-autoscroll",
+   "cell_metadata_filter": "ExecuteTime,collapsed,code_folding,incorrectly_encoded_metadata,tags,-autoscroll",
    "formats": "ipynb,py:percent",
    "notebook_metadata_filter": "all,-widgets,-varInspector"
   },
@@ -727,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
