--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-and-Solutions.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-and-Solutions.ipynb
@@ -703,7 +703,7 @@
     "tags": []
    },
    "source": [
-    "### PROBLEM\n",
+    "### SOLUTION\n",
     "## Testing the Implications of Very Impatient Households\n",
     "\n",
     "Now that we have the baseline set of simulated agents (in $\\texttt{MyTypes}$) and the altered set of simulated agents (in whatever you named your copied version), let's investigate what this means for micro- and macroeconomic outcomes.  In the code block below, use both lists of agents and the data tools you wrote above to investigate the following questions:\n",
@@ -816,7 +816,7 @@
    "id": "15e75a28",
    "metadata": {},
    "source": [
-    "### PROBLEM -- Plot the new distribution of wealth\n",
+    "### SOLUTION -- Plot the new distribution of wealth\n",
     "\n",
     "The $\\texttt{matplotlib}$ library provides plotting functionality that replicates Matlab's plot features (more or less). As an example of how to use it, we have written a few lines of code that plot the empirical vs simulated Lorenz curves.  Write some code that plots the CDF of the MPC before and after adding very impatient households, and plots the DIFFERENCES between the Lorenz curves across the two populations.  Interpret the two graphs."
    ]
