--- a/notebooks/TractableBufferStock-Interactive-Problems-and-Solutions.ipynb
+++ b/notebooks/TractableBufferStock-Interactive-Problems-and-Solutions.ipynb
@@ -137,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0e4fc781d3d438ba076221ec28bb724",
+       "model_id": "8c61e1c5af4a4fe1895d92cc3f4d121a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,6 +338,96 @@
     "\n",
     "(Hint: You do not need to copy and paste (then edit) the entire contents of the cell that creates the widgets above; you only need to modify the `DiscFac_widget`)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.018402797477175"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a) get beta max\n",
+    "betamin = 0.05\n",
+    "\n",
+    "Psi = TBS_dictionary['PermGroFac']/(1 - TBS_dictionary['UnempPrb'])\n",
+    "betamax = Psi**TBS_dictionary['CRRA'] / (TBS_dictionary['Rfree'] * (1 - TBS_dictionary['UnempPrb']))\n",
+    "betamax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b) modify DiscFac_widget\n",
+    "DiscFac_widget = widgets.FloatSlider(\n",
+    "    min=betamin,\n",
+    "    max=betamax - 0.01,\n",
+    "    step=0.0002,\n",
+    "    value=TBS_dictionary['DiscFac'], # Default value\n",
+    "    continuous_update=False,\n",
+    "    readout_format='.4f',\n",
+    "    description='$\\\\beta$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21985624f32741d0931341bf2c9fb0aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.975, continuous_update=False, description='$\\\\beta$', max=1.00840279…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# To make some of the widgets not appear, replace X_widget with fixed(desired_fixed_value) in the arguments below.\n",
+    "interact(makeTBSplot,\n",
+    "         DiscFac = DiscFac_widget,\n",
+    "         CRRA = fixed(TBS_dictionary['CRRA']),\n",
+    "         # We can fix a parameter using the fixed() operator\n",
+    "         Rfree      = fixed(TBS_dictionary['Rfree']),\n",
+    "#         Rfree = Rfree_widget,   # This is the line which, when uncommented, would make Rfree a slider\n",
+    "         PermGroFac = fixed(TBS_dictionary['PermGroFac']),\n",
+    "         UnempPrb = fixed(TBS_dictionary['UnempPrb']),\n",
+    "         mMin = mMin_widget,\n",
+    "         mMax = mMax_widget,\n",
+    "         cMin = cMin_widget,\n",
+    "         cMax = cMax_widget,\n",
+    "         show_targ = show_targ_widget,\n",
+    "         plot_emp = plot_emp_widget,\n",
+    "         plot_ret = plot_ret_widget,\n",
+    "         plot_mSS = plot_mSS_widget,\n",
+    "        );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -364,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -389,5 +479,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
