--- a/notebooks/TractableBufferStock-Interactive-Problems-and-Solutions.ipynb
+++ b/notebooks/TractableBufferStock-Interactive-Problems-and-Solutions.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "803b9fe49ab548eeb89b29a955f54226",
+       "model_id": "3482871f2cbd4db7b63797af9701eccc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,25 +333,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "betaMax equals 1.0120377799929425\n"
+      "betaMax equals 1.018402797477175\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Computing betaMax from the formula given in the TBS paper\n",
+    "\n",
+    "rho = MyTBStype.CRRA\n",
+    "beta = MyTBStype.DiscFac\n",
+    "G = MyTBStype.PermGroFac\n",
+    "R = MyTBStype.Rfree\n",
+    "UnempPrb = MyTBStype.UnempPrb\n",
+    "Phi = G / (1-UnempPrb)\n",
+    "\n",
+    "betaMax = Phi**rho / (R*(1-UnempPrb))\n",
+    "print('betaMax equals ' + str(betaMax))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "701bc1ba145943dcbe76c5803b5ce23a",
+       "model_id": "e3e952c2fc7649d1aae52ae3584c338b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.975, continuous_update=False, description='$\\\\beta$', max=1.00203777…"
+       "interactive(children=(FloatSlider(value=0.975, continuous_update=False, description='$\\\\beta$', max=1.00840279…"
       ]
      },
      "metadata": {},
@@ -359,10 +379,6 @@
     }
    ],
    "source": [
-    "# Computing betaMax from the formula given in the TBS paper\n",
-    "betaMax = (MyTBStype.PermGroFac**MyTBStype.CRRA) * ((1-MyTBStype.UnempPrb)**(-MyTBStype.CRRA)) / MyTBStype.Rfree\n",
-    "print('betaMax equals ' + str(betaMax))\n",
-    "\n",
     "# Coding a separate Discount Factor widget\n",
     "DiscFac_widget2 = widgets.FloatSlider(\n",
     "    min= MyTBStype.DiscFac - 0.05,\n",
