2nd TBS and Transitory vs Permanent Shocks PS

--- a/notebooks/How-Large-Are-Transitory-And-Permanent-Shocks-Problems-And-Solutions.ipynb
+++ b/notebooks/How-Large-Are-Transitory-And-Permanent-Shocks-Problems-And-Solutions.ipynb
@@ -23,7 +23,9 @@
     "import numpy as np\n",
     "import HARK\n",
     "from copy import deepcopy\n",
-    "from HARK.utilities import plot_funcs"
+    "from HARK.utilities import plot_funcs\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf"
    ]
   },
   {
@@ -133,6 +135,187 @@
     "1. Use the method above to calculate simulated 'empirical' estimates of the magnitude of the shocks\n",
     "   * Experiment to determine how large a population of consumers, and how long a span of time, you need to correctly recover the 'true' parameter values for the income process"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose some calibrated parameters that roughly match steady state \n",
+    "init_infinite = {\n",
+    "    \"CRRA\":1.0,                    # Coefficient of relative risk aversion \n",
+    "    \"Rfree\":1.01/(1.0 - 1.0/240.0), # Survival probability,\n",
+    "    \"PermGroFac\":[1.000**0.25], # Permanent income growth factor (no perm growth),\n",
+    "    \"PermGroFacAgg\":1.0,\n",
+    "    \"BoroCnstArt\":0.0,\n",
+    "    \"CubicBool\":False,\n",
+    "    \"vFuncBool\":False,\n",
+    "    \"PermShkStd\":[(0.01*4/11)**0.5],  # Standard deviation of permanent shocks to income\n",
+    "    \"PermShkCount\":7,  # Number of points in permanent income shock grid\n",
+    "    \"TranShkStd\":[(0.01*4)**0.5],  # Standard deviation of transitory shocks to income,\n",
+    "    \"TranShkCount\":5,  # Number of points in transitory income shock grid\n",
+    "    \"UnempPrb\":0.07,  # Probability of unemployment while working\n",
+    "    \"IncUnemp\":0.15,  # Unemployment benefit replacement rate\n",
+    "    \"UnempPrbRet\":0.07,\n",
+    "    \"IncUnempRet\":0.15,\n",
+    "    \"aXtraMin\":0.00001,  # Minimum end-of-period assets in grid\n",
+    "    \"aXtraMax\":20,  # Maximum end-of-period assets in grid\n",
+    "    \"aXtraCount\":20,  # Number of points in assets grid,\n",
+    "    \"aXtraExtra\":[None],\n",
+    "    \"aXtraNestFac\":3,  # Number of times to 'exponentially nest' when constructing assets grid\n",
+    "    \"LivPrb\":[1.0 - 1.0/240.0],  # Survival probability\n",
+    "    \"DiscFac\":0.97,             # Default intertemporal discount factor, # dummy value, will be overwritten\n",
+    "    \"cycles\":0,\n",
+    "    \"T_cycle\":1,\n",
+    "    \"T_retire\":0,\n",
+    "    'T_sim':2000,  # Number of periods to simulate (idiosyncratic shocks model, perpetual youth)\n",
+    "    'T_age':1000,\n",
+    "    'IndL': 10.0/9.0,  # Labor supply per individual (constant),\n",
+    "    'aNrmInitMean':np.log(0.00001),\n",
+    "    'aNrmInitStd':0.0,\n",
+    "    'pLvlInitMean':0.0,\n",
+    "    'pLvlInitStd':0.0,\n",
+    "    'AgentCount':100,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from HARK.ConsumptionSaving.ConsIndShockModel import IndShockConsumerType\n",
+    "ConsumerType = IndShockConsumerType(**init_infinite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPFRaw                 = 0.983799 \n",
+      "GPFNrm                 = 0.987147 \n",
+      "GPFAggLivPrb           = 0.979700 \n",
+      "Thorn = APF            = 0.983799 \n",
+      "PermGroFacAdj          = 0.996609 \n",
+      "uInvEpShkuInv          = 1.000000 \n",
+      "VAF                    = 0.965958 \n",
+      "WRPF                   = 0.067617 \n",
+      "DiscFacGPFNrmMax       = 0.982630 \n",
+      "DiscFacGPFAggLivPrbMax = 0.990099 \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.129\n",
+      "Model:                            OLS   Adj. R-squared:                  0.129\n",
+      "Method:                 Least Squares   F-statistic:                 7.317e+04\n",
+      "Date:                Mon, 28 Feb 2022   Prob (F-statistic):               0.00\n",
+      "Time:                        16:45:02   Log-Likelihood:                 47251.\n",
+      "No. Observations:              495000   AIC:                        -9.450e+04\n",
+      "Df Residuals:                  494998   BIC:                        -9.448e+04\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.0058      0.001     10.520      0.000       0.005       0.007\n",
+      "x1             0.0036   1.33e-05    270.507      0.000       0.004       0.004\n",
+      "==============================================================================\n",
+      "Omnibus:                   406484.625   Durbin-Watson:                   0.118\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         13928067.871\n",
+      "Skew:                           3.788   Prob(JB):                         0.00\n",
+      "Kurtosis:                      27.858   Cond. No.                         71.8\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solution:\n",
+    "#Controlling the time horizon over which we estimate the transitory and permanent shocks:\n",
+    "ConsumerType.T_sim = 100\n",
+    "\n",
+    "#Setting up and simulating the agents' behavior:\n",
+    "ConsumerType.solve(verbose=False)\n",
+    "ConsumerType.track_vars = ['pLvl']\n",
+    "ConsumerType.initialize_sim()\n",
+    "\n",
+    "ConsumerType.simulate()\n",
+    "\n",
+    "SimulatedIncome = np.log(ConsumerType.history['pLvl'])\n",
+    "#print(np.shape(SimulatedIncome))   #Just to check the shape of the matrix\n",
+    "\n",
+    "d = []\n",
+    "y = []\n",
+    "\n",
+    "\n",
+    "for i in range(ConsumerType.AgentCount):\n",
+    "    for n in range(ConsumerType.T_sim -1):\n",
+    "        for j in range(ConsumerType.T_sim-n-1):\n",
+    "            Aux1 = (SimulatedIncome[j+n+1,i]- SimulatedIncome[j,i])**2\n",
+    "            y.append(Aux1)\n",
+    "            Aux2 = n+1\n",
+    "            d.append(Aux2)\n",
+    "            \n",
+    "\n",
+    "x = d\n",
+    "x = sm.add_constant(x)\n",
+    "model = sm.OLS(y,x)\n",
+    "results = model.fit()\n",
+    "results.params\n",
+    "\n",
+    "print(results.summary())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variance of the transitory shock Theta in the model is given by [0.2] where the empirical estimate gives us 0.0536372617214411\n",
+      "The variance of the permanent shock Psi in the model is given by [0.06030226891555272] where the empirical estimate gives us 0.06005135212661783\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Comparing our esimation results with the actual standard deviations in the model:\n",
+    "print('The variance of the transitory shock Theta in the model is given by ' + str(ConsumerType.TranShkStd)+ ' where the empirical estimate gives us '+str(np.sqrt(results.params[0]/2)))\n",
+    "print('The variance of the permanent shock Psi in the model is given by ' + str(ConsumerType.PermShkStd)+ ' where the empirical estimate gives us '+str(np.sqrt(results.params[1])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The estimator for the standard deviation of the permanent shock reaped from the coefficient in front of the time difference 'd' is already relativly close to its true value, but the estimation of the transitory shock, garnered from the estimation of the constant in our regression is way too small though. Increasing the agent count did not remedy the problem in a significant way. But increasing the time horizon for teh observations helps tremenduously in overcoming the bias to the constant (i.e. Std of transitory shocks), but it also increased the downward bias to the slope coefficient (i.e. our estimate of Std of permanent shocks).  \n",
+    "\n",
+    "My interpretation of this finding is that increasing time, increases the spread in agents permanent income levels, which biases the perception of the slope of the equation. To balance out this bias the constant gets biased in the opposite direction. This is particularly true for small numbers of agents. But I am not entirely satisfied with the result, as it strains against the theory discussed before the statement of the problem. I am looking forward to hear your opinion and see what we did wrong in our code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
