--- a/notebooks/Nondurables-During-Great-Recession-Problems-And-Solutions.ipynb
+++ b/notebooks/Nondurables-During-Great-Recession-Problems-And-Solutions.ipynb
@@ -673,7 +673,7 @@
    "notebook_metadata_filter": "all,-widgets,-varInspector"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -687,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
