--- a/notebooks/TractableBufferStock-Interactive-Problems.ipynb
+++ b/notebooks/TractableBufferStock-Interactive-Problems.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "33f2dbcc",
    "metadata": {},
    "source": [
     "# The Tractable Buffer Stock Model\n",
@@ -11,14 +12,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1b0c985",
    "metadata": {},
    "source": [
-    "The [TractableBufferStock](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock/) model is a (relatively) simple framework that captures all of the qualitative, and many of the quantitative features of optimal consumption in the presence of labor income uncertainty.  "
+    "The [TractableBufferStock](http://llorracc.github.io/TractableBufferStock/) model is a (relatively) simple framework that captures all of the qualitative, and many of the quantitative features of optimal consumption in the presence of labor income uncertainty.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "68713f7a",
    "metadata": {
     "code_folding": [
      0
@@ -32,18 +35,19 @@
     "\n",
     "import numpy as np\n",
     "import HARK \n",
-    "from time import clock\n",
+    "import time\n",
     "from copy import deepcopy\n",
     "mystr = lambda number : \"{:.3f}\".format(number)\n",
     "\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
-    "from HARK.utilities import plotFuncs"
+    "from HARK.utilities import plot_funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "1b101952",
    "metadata": {
     "code_folding": [
      0
@@ -57,6 +61,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fd7b32f",
    "metadata": {},
    "source": [
     "The key assumption behind the model's tractability is that there is only a single, stark form of uncertainty:  So long as an employed consumer remains employed, that consumer's labor income $P$ will rise at a constant rate $\\Gamma$:\n",
@@ -77,18 +82,19 @@
     "\\end{eqnarray*}\n",
     "where $\\mathcal{R} = R/\\Gamma$, and $\\mathbb{1}_{t+1} = 1$ if the consumer is employed (and zero if unemployed).\n",
     "\n",
-    "Under plausible parameter values the model has a target level of $\\check{m} = M/P$ (market resources to permanent income) with an analytical solution that exhibits plausible relationships among all of the parameters.  \n",
+    "Under plausible parameter values the model has a target level of $\\hat{m} = M/P$ (market resources to permanent income) with an analytical solution that exhibits plausible relationships among all of the parameters.  \n",
     "\n",
     "Defining $\\gamma = \\log \\Gamma$ and $r = \\log R$, the handout shows that an approximation of the target is given by the formula:\n",
     "\n",
     "\\begin{align}\n",
-    "\\check{m} & = 1 + \\left(\\frac{1}{(\\gamma-r)+(1+(\\gamma/\\mho)(1-(\\gamma/\\mho)(\\rho-1)/2))}\\right)\n",
+    "\\hat{m} & \\approx 1 + \\left(\\frac{1}{(\\gamma-r)+(1+(\\gamma/\\mho)(1-(\\gamma/\\mho)(\\rho-1)/2))}\\right)\n",
     "\\end{align}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "0e98e2c5",
    "metadata": {
     "code_folding": [
      0
@@ -107,6 +113,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78a70893",
    "metadata": {},
    "source": [
     "## Target Wealth\n",
@@ -118,7 +125,7 @@
     "\\\\ \\left(\\frac{(R \\beta (1-\\mho))^{1/\\rho}}{G (1-\\mho)}\\right)  &<  1\n",
     "\\\\ \\left(\\frac{(R \\beta)^{1/\\rho}}{G} (1-\\mho)^{-\\rho}\\right)  &<  1\n",
     "\\end{align}\n",
-    "and recall (from [PerfForesightCRRA](http://econ.jhu.edu/people/ccarroll/public/lecturenotes/consumption/PerfForesightCRRA/)) that the perfect foresight 'Growth Impatience Factor' is \n",
+    "and recall (from [PerfForesightCRRA](https://www.econ2.jhu.edu/people/ccarroll/public/lecturenotes/consumption/PerfForesightCRRA/)) that the perfect foresight 'Growth Impatience Factor' is \n",
     "\\begin{align}\\label{eq:PFGIC}\n",
     "\\left(\\frac{(R \\beta)^{1/\\rho}}{G}\\right)  &<  1\n",
     "\\end{align}\n",
@@ -127,28 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "9cb33696",
    "metadata": {
     "code_folding": [
      3
-    ]
+    ],
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0e4fc781d3d438ba076221ec28bb724",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.975, continuous_update=False, description='$\\\\beta$', max=0.99, min=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a function that plots the employed consumption function and sustainable consumption function \n",
     "# for given parameter values\n",
@@ -186,7 +183,7 @@
     "    if show_targ:\n",
     "        mTarg = MyTBStype.mTarg\n",
     "        cTarg = MyTBStype.cTarg\n",
-    "        targ_label = r'$\\left(\\frac{1}{(\\gamma-r)+(1+(\\gamma/\\mho)(1-(\\gamma/\\mho)(\\rho-1)/2))}\\right) $' #+ mystr(mTarg) + '\\n$\\check{c}^* = $ ' + mystr(cTarg)\n",
+    "        targ_label = r'$\\left(\\frac{1}{(\\gamma-r)+(1+(\\gamma/\\mho)(1-(\\gamma/\\mho)(\\rho-1)/2))}\\right) $' #+ mystr(mTarg) + '\\n$\\hat{c}^* = $ ' + mystr(cTarg)\n",
     "        plt.annotate(targ_label,xy=(0.0,0.0),xytext=(0.2,0.1),textcoords='axes fraction',fontsize=18)\n",
     "        plt.plot(mTarg,cTarg,'ro')\n",
     "        plt.annotate('↙️ m target',(mTarg,cTarg),xytext=(0.25,0.2),ha='left',textcoords='offset points')\n",
@@ -324,6 +321,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "305fbfa4",
    "metadata": {},
    "source": [
     "# PROBLEM\n",
@@ -332,7 +330,7 @@
     "\n",
     "First, create a variable `betaMax` equal to the value of $\\beta$ at which the Growth Impatience Factor is exactly equal to 1 (that is, the consumer is exactly on the border between patience and impatience).  (Hint: The formula for this is [here](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock/#DiscountMaxGICTBS)).\n",
     "\n",
-    "Next, create a slider/'widget' like the one above, but where all variables except $\\beta$ are set to their default values, and the slider takes $\\beta$ from 0.05 below its default value up to `betaMax - 0.01`.  (The numerical solution algorithm becomes unstable when the GIC is too close to being violated, so you don't want to go all the way up to `betaMax.`)\n",
+    "Next, create a slider/'widget' like the one above, but where all variables except $\\beta$ are set to their default values, and the slider takes $\\beta$ from 0.05 below its default value up to `betaMax - 0.01`.  (The numerical solution algorithm becomes unstable when the GICRaw is too close to being violated, so you don't want to go all the way up to `betaMax.`)\n",
     "\n",
     "Explain the logic of the result that you see.\n",
     "\n",
@@ -342,9 +340,16 @@
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "collapsed,code_folding",
+   "cell_metadata_filter": "ExecuteTime,collapsed,code_folding,jupyter,tags,-autoscroll",
    "encoding": "# -*- coding: utf-8 -*-",
-   "formats": "ipynb,py:percent"
+   "formats": "ipynb,py:percent",
+   "notebook_metadata_filter": "all,-widgets,-varInspector",
+   "text_representation": {
+    "extension": ".py",
+    "format_name": "percent",
+    "format_version": "1.3",
+    "jupytext_version": "1.11.5"
+   }
   },
   "kernel_info": {
    "name": "python3"
@@ -364,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -389,5 +394,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
